--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@ body{
     overflow: hidden;
     text-align: center;
 }
-#myCanvas{
+#carCanvas{
     background-color: #ffffff;
+}
+#networkCanvas {
+    background-color: black;
 }
