--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,24 @@ body{
     margin: 0;
     background-color: #eff2f5;
     overflow: hidden;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+#verticalButtons{
+    display: flex;
+    flex-direction: column;    
+}
+
+button{
+    border: none;
+    border-radius: 5px;
+    padding: 5px 5px 7px 5px;
+    margin: 2px;
+    cursor: pointer;
+    font-size: 30px;
+}
+
 #carCanvas{
     background-color: #ffffff;
 }
